# volkano

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
examples/: functions.vlk  print.vlk  variables.vlk
include/: vconf.h  vm.h  vstatus.h  vtypes.h
src/tests/: main.cpp
src/tools/: decompiler.cpp
src/volkano/: base.h  compiler.cpp  compiler.h  lexer.cpp  lexer.h  mem.h  opcodes.h  parser.cpp  parser.h  stack.cpp  stack.h  vm.cpp
